      product name (requires DMI support, which is normally enabled).
  * Add support for the S.H.E. button on some models, e.g. 1002HA.
    - This is incomplete: no known button event.
  * Have the audio keys affect the 'Master' mixer control by default. This
    has a side effect: the 'Beep' control is effectively muted when 'Master'
    is muted.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Fri, 18 Dec 2009 16:48:05 +0000

eeepc-acpi-scripts (1.1.5) unstable; urgency=high

  [ Darren Salt ]
  * Fix Super Hybrid Engine support breakage in 1.1.4.
    A missing "[" caused the AC-adaptor-unplugged code to fail; consequently,
    the preferred running-on-battery mode (the default being underclocked)
    would not be selected.
  * Set urgency=high (for documentation reasons; due to 1.1.4).
  * Add myself to Uploaders.

  [ Damyan Ivanov ]
  * add DMUA flag
  * rules: add small test suite for all shell scripts

 -- Damyan Ivanov <dmn@debian.org>  Fri, 18 Dec 2009 07:38:14 +0200

eeepc-acpi-scripts (1.1.4) unstable; urgency=low

  * rules: when stripping comments from /etc/default/eeepc-acpi-scripts, also
    remove lines consisting solely of '#'
  * when changing Super Hybrid Engine modes, ignore models 701 and 702 which
    don't officially support S.H.E. (Closes: #559578)
    Additionally provide a variable in the default file to override the ignore

 -- Damyan Ivanov <dmn@debian.org>  Wed, 16 Dec 2009 22:56:18 +0200

eeepc-acpi-scripts (1.1.3) unstable; urgency=low

  [ Darren Salt ]
  * Init script fixups for when /etc/default/eeepc-acpi-scripts is missing;
    ensure that we default to "automatic" for our S.H.E. handling. 
  * Belatedly bump acpid version requirement. (Closes: #550119)
  * Bring the copyright file up to date.
  * Allow setting of whether the super hybrid engine control defaults to
    manual or auto.
  * Strip out comments from /etc/default/eeepc-acpi-scripts and store a